# Python_valida_cnpj_ReceitaWS

./: README.md  main.py  pyproject.toml
services/: analysers.py  apis.py  files.py
utils/: make_data.py
